--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@
 # Be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
+  adapter: pg
   encoding: utf8
   reconnect: false
   database: cv_builder_db
@@ -13,7 +13,7 @@ development:
   password: asdfgh
 
 fast_mode:
-  adapter: mysql2
+  adapter: pg
   encoding: utf8
   reconnect: false
   database: cv_builder_db
@@ -22,7 +22,7 @@ fast_mode:
   password: asdfgh
 
 production:
-  adapter: mysql2
+  adapter: pg
   encoding: utf8
   reconnect: false
   database: cv_builder_db
