--- a/config/database.yml
+++ b/config/database.yml
@@ -4,29 +4,27 @@
 # Be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: pg
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   database: cv_builder_db
   pool: 5
   username: root
   password: asdfgh
-  port: 5432
-  host: localhost
+  
 
 fast_mode:
-  adapter: pg
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   database: cv_builder_db
   pool: 5
   username: root
   password: asdfgh
-  port: 5432
-  host: localhost
+  
 
 production:
-  adapter: pg
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   database: cv_builder_db
