--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@
 # Be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: postgresql
+  adapter: mysql2
   encoding: utf8
   reconnect: false
   database: cv_builder_db
